--- a/managementStyle.css
+++ b/managementStyle.css
@@ -1,124 +1,152 @@
+  
+main {
+  display: contents;
+}
+
 .map {
-    width: 820px;   
-    height: 400px; 
+height: 100%;
 }
 
 #header-bar, .search-container, .filter-buttons {
-    display: flex;
-    flex-direction: row;
-
+  display: flex;
+  flex-direction: row;
 }
-  
-  
+
+.sqs-block-content {
+height: 100%;
+}
 
 .filter-buttons {
-    gap: 10px;
+  gap: 10px;
 }
 
 #header-bar {
-    justify-content: space-between;
-}
-
-#plugin {
-    width: 820px; 
+  justify-content: space-between;
 }
 
 #search-container {
-  	padding-bottom: 10px;
+  padding-bottom: 10px;
 }
-  
-  #addition-container {
-    padding-top: 10px;
+
+#plugin {
+  height: -webkit-fill-available;
+}
+#addition-container {
+  padding-top: 10px;
 }
 
 .leaflet-control-container {
-    display: flex !important;
-    flex-direction: row !important;
-    height: 100% !important;
+  display: flex !important;
+  flex-direction: row !important;
+  height: 100% !important;
 }
 
 #sidebar {
-    padding: 20px;
+  padding: 20px;
 }
 
 .close {
-    text-decoration: none !important;
+  text-decoration: none !important;
 }
 
 .leaflet-bottom {
-    display: none;
+  display: none;
 }
 
 #management-plugin {
-    display: flex;
-    flex-direction: row;
-  	height: 100vh;
-}
-
-#management-plugin > div {
-    margin: 1%;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
 }
 
 #control-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-  	background-color: #E97B29;
-  	flex-grow: 1;
-  	padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 30%;
+  background-color: #E97B29;
+  padding: 10px;
+  overflow-y: auto;
+  height: 100vh;
 }
 
 #form-div {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  padding: 10px;
-  padding-inline: 20px;
+display: flex;
+flex-direction: column;
+height: 100%;
+padding: 10px;
+padding-inline: 20px;
+flex-grow: 1;
 }
+
 #descriptionfield {
-  width: 100%;
-  height: 20%;
-  }
+width: 100%;
+height: 20%;
+}
+
 #selection-container {
-    flex-grow: 1;
-    width: 100%;
-    overflow-y: scroll;
+  flex-grow: 1;
+  width: 100%;
+  overflow-y: scroll;
 }
 
-  .locationdiv{
-   border-bottom: 1px solid black;
-   padding: 5px;
-  }
-  
-  .locationdiv:hover {
-    background-color: #bc3b3b;
-    color: white;
-  }
-  
-  .container  {
-  padding: 0px !important;
-  margin: 0px auto;
-  display: contents;
-  padding-bottom: 0px !important;
-  padding-top: 0px !important;
-  }
-  
-  #buttons {
+.locationdiv{
+ border-bottom: 1px solid black;
+ padding: 5px;
+}
+
+.locationdiv:hover {
+  background-color: #bc3b3b;
+  color: white;
+}
+
+.container  {
+padding: 0px !important;
+margin: 0px auto;
+display: contents;
+padding-bottom: 0px !important;
+padding-top: 0px !important;
+}
+
+#buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding-top: 10px;
+}
+
+.left-buttons {
     display: flex;
-    justify-content: space-between;
-    width: 100%;
-  }
-
-  .left-buttons {
-      display: flex;
-      gap: 20px;
-  }
-  
-  form {
-    display: none;
+    gap: 20px;
 }
-  .locationtitle {
-    line-height: 1.3em;
-    font-weight: bold;
+
+form {
+  display: none;
+}
+
+#formcontents {
+  display: none;
+}
+
+#formcontents label {
+  padding-top: 5px;
+}
+
+.locationtitle {
+  line-height: 1.3em;
+  font-weight: bold;
+}
+
+
+@media screen and (max-width:748px) {
+  #management-plugin {
+    flex-direction: column;
+  }
+  #control-div {
+    width: 100%;
+    height: 100vh;
+  }
+  #form-div {
+    padding: 10px;
+  }
 }
